# CybrOutreach

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
cybroutreach/: __init__.py  cli.py  generator.py  providers.py
examples/: batch_followup.sh  batch_friendly.sh  leads.csv  meeting_request.sh
icebreaker/: __init__.py  cli.py  generator.py  providers.py  templates.py
tests/: __init__.py  conftest.py  test_cli.py  test_generator.py  test_providers.py  test_templates.py
